--- a/cadastrosTags.html
+++ b/cadastrosTags.html
@@ -13,7 +13,7 @@
         <form id="tagForm">
             <div class="form-group">
                 <label for="icon">Ícone</label>
-                <input type="text" id="icon" name="icon" >
+                <input type="text" id="icon" name="icon">
             </div>
             <div class="form-group">
                 <label for="name">Nome da Tag</label>
@@ -27,6 +27,8 @@
                 <button type="submit">Cadastrar Tag</button>
             </div>
         </form>
+
+        <button id="showTagsButton">Mostrar Tags Cadastradas</button>
     </div>
 
     <script>
@@ -52,6 +54,18 @@
             }).catch(err => {
                 console.error(err);
                 alert('Erro ao cadastrar a tag.');
+            });
+        });
+
+        document.getElementById('showTagsButton').addEventListener('click', function () {
+            db.allDocs({ include_docs: true, descending: true }).then(doc => {
+                let tags = doc.rows.map(row => {
+                    return `Ícone: ${row.doc.icon}, Nome: ${row.doc.name}, Descrição: ${row.doc.description}`;
+                }).join('\n');
+                alert(tags);
+            }).catch(err => {
+                console.error(err);
+                alert('Erro ao buscar as tags.');
             });
         });
     </script>
