--- a/cadastrosMetas.html
+++ b/cadastrosMetas.html
@@ -4,26 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CadastrosDeMetas</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Cadastro de Metas</h1>
+        <h2>Cadastro de Metas</h2>
         <form id="goalForm">
-            <label for="goal">Meta:</label>
-            <input type="text" id="goal" name="goal" required>
-
-            <label for="startDate">Data de Início:</label>
-            <input type="date" id="startDate" name="startDate" required>
-
-            <label for="endDate">Data de Término:</label>
-            <input type="date" id="endDate" name="endDate" required>
-
-            <label for="description">Descrição:</label>
-            <textarea id="description" name="description" rows="4" required></textarea>
-
-            <button type="submit">Cadastrar Meta</button>
+            <div class="form-group">
+                <label for="goal">Meta:</label>
+                <input type="text" id="goal" name="goal" required>
+            </div>
+            <div class="form-group">
+                <label for="startDate">Data de Início:</label>
+                <input type="date" id="startDate" name="startDate" required>
+            </div>
+            <div class="form-group">
+                <label for="endDate">Data de Término:</label>
+                <input type="date" id="endDate" name="endDate" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Descrição:</label>
+                <textarea id="description" name="description" required></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit">Cadastrar Meta</button>
+            </div>
         </form>
     </div>
 
