--- a/cadastrosTags.html
+++ b/cadastrosTags.html
@@ -6,11 +6,12 @@
     <title>Cadastro de Tags</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/pouchdb/dist/pouchdb.min.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <h2>Cadastro de Tags</h2>
-        <form id="tagForm">
+        <form id="tagForm" data-db="tags">
             <div class="form-group">
                 <label for="icon">Ícone</label>
                 <input type="text" id="icon" name="icon">
@@ -28,46 +29,7 @@
             </div>
         </form>
 
-        <button id="showTagsButton">Mostrar Tags Cadastradas</button>
+        <button id="showTagsButton" data-db="tags">Mostrar Tags Cadastradas</button>
     </div>
-
-    <script>
-        const db = new PouchDB('tags');
-
-        document.getElementById('tagForm').addEventListener('submit', function (event) {
-            event.preventDefault();
-            
-            const icon = document.getElementById('icon').value;
-            const name = document.getElementById('name').value;
-            const description = document.getElementById('description').value;
-
-            const tag = {
-                _id: new Date().toISOString(), 
-                icon,
-                name,
-                description
-            };
-
-            db.put(tag).then(() => {
-                alert('Tag cadastrada com sucesso!');
-                document.getElementById('tagForm').reset();
-            }).catch(err => {
-                console.error(err);
-                alert('Erro ao cadastrar a tag.');
-            });
-        });
-
-        document.getElementById('showTagsButton').addEventListener('click', function () {
-            db.allDocs({ include_docs: true, descending: true }).then(doc => {
-                let tags = doc.rows.map(row => {
-                    return `Ícone: ${row.doc.icon}, Nome: ${row.doc.name}, Descrição: ${row.doc.description}`;
-                }).join('\n');
-                alert(tags);
-            }).catch(err => {
-                console.error(err);
-                alert('Erro ao buscar as tags.');
-            });
-        });
-    </script>
 </body>
 </html>
