--- a/cadastrosUsuarios.html
+++ b/cadastrosUsuarios.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/pouchdb/dist/pouchdb.min.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <h2>Cadastro de Usuário</h2>
-        <form id="userForm">
+        <form id="userForm" data-db="users">
             <div class="form-group">
                 <label for="nome">Nome</label>
                 <input type="text" id="nome" name="nome" required>
@@ -46,43 +48,8 @@
                 <button type="submit">Cadastrar</button>
             </div>
         </form>
+
+        <button id="showTagsButton" data-db="users">Mostrar Users Cadastradas</button>
     </div>
-
-    <script>
-        const db = new PouchDB('usuarios');
-
-        document.getElementById('userForm').addEventListener('submit', function (event) {
-            event.preventDefault();
-            
-            const nome = document.getElementById('nome').value;
-            const email = document.getElementById('email').value;
-            const senha = document.getElementById('senha').value;
-            const endereco = document.getElementById('endereco').value;
-            const cidade = document.getElementById('cidade').value;
-            const estado = document.getElementById('estado').value;
-            const cep = document.getElementById('cep').value;
-            const telefone = document.getElementById('telefone').value;
-
-            const usuario = {
-                _id: new Date().toISOString(), 
-                nome,
-                email,
-                senha,
-                endereco,
-                cidade,
-                estado,
-                cep,
-                telefone
-            };
-
-            db.put(usuario).then(() => {
-                alert('Usuário cadastrado com sucesso!');
-                document.getElementById('userForm').reset();
-            }).catch(err => {
-                console.error(err);
-                alert('Erro ao cadastrar o usuário.');
-            });
-        });
-    </script>s
 </body>
 </html>
