Ajuste no index

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-    <header class="navbar">
-        <a href="cadastrosUsuarios.html" class="active">Cadastro de Usuarios</a>
-        <a href="cadastrosMetas.html">Cadastros de Metas</a>
-        <a href="cadastrosTags.html">Cadastros de Tags</a>
-    </header>
+    <nav class="navbar">
+        <a href="#home">Cadastro de Usuarios</a>
+        <a href="#sobre">Cadastros de Metas</a>
+        <a href="#servicos">Cadastros de Tags</a>
+        <a href="#contato">Contato</a>
+    </nav>
+    <div class="container">
+        <!-- Conteúdo da página aqui -->
+    </div>
 </body>
 
 </html>
