--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
     <nav class="navbar">
+        <a href="#" onclick="loadContent('home')">Home</a>
         <a href="#" onclick="loadContent('cadastrosUsuarios.html')">Cadastros de Usuarios</a>
         <a href="#" onclick="loadContent('cadastrosMetas.html')">Cadastros de Metas</a>
         <a href="#" onclick="loadContent('cadastrosTags.html')">Cadastros de Tags</a>
-        <a href="#" onclick="loadContent('contato.html')">Contato</a>
+
     </nav>
     <div class="container" id="content">
         <h1>Bem-vindo!</h1>
