--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <title>PaginaInicial</title>
+    <title>Entrada</title>
+    <script>
+        if (localStorage.getItem('loggedIn') === 'true') {
+            window.location.href = 'home.html';
+        } else {
+            window.location.href = 'login.html';
+        }
+    </script>
 </head>
-
 <body>
-    <nav class="navbar">
-        <a href="#" onclick="loadContent('home')">Home</a>
-        <a href="#" onclick="loadContent('cadastrosUsuarios.html')">Cadastros de Usuarios</a>
-        <a href="#" onclick="loadContent('cadastrosMetas.html')">Cadastros de Metas</a>
-        <a href="#" onclick="loadContent('cadastrosTags.html')">Cadastros de Tags</a>
-
-    </nav>
-    <div class="container" id="content">
-        <h1>Bem-vindo!</h1>
-        <p>Estamos felizes em tê-lo aqui. Navegue pelo nosso site para saber mais sobre nossos serviços e entre em
-            contato para mais informações.</p>
-    </div>
+    <p>Redirecionando...</p>
+    <script src="https://cdn.jsdelivr.net/npm/pouchdb-browser/dist/pouchdb-browser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pouchdb-find/dist/pouchdb.find.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
