--- a/cadastrosMetas.html
+++ b/cadastrosMetas.html
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label for="description">Descrição:</label>
-                <textarea id="description" name="description" required></textarea>
+                <textarea id="description" name="description"></textarea>
             </div>
             <div class="form-group">
                 <label for="tag">Tag:</label>
