--- a/login.html
+++ b/login.html
@@ -20,9 +20,11 @@
             </div>
             <div class="form-group">
                 <button type="submit">Entrar</button>
+                <button type="button" onclick="window.location.href='cadastrosUsuarios.html'">Cadastrar-se</button>
             </div>
         </form>
     </div>
+    <script src="auth.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/pouchdb/dist/pouchdb.min.js"></script>
     <script src="script.js" defer></script>
 </body>
