--- a/cadastrosUsuarios.html
+++ b/cadastrosUsuarios.html
@@ -48,6 +48,6 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/pouchdb/dist/pouchdb.min.js"></script>
-    <script src="cadastro.js" defer></script>
+    <script src="cadastros/cadastro.js" defer></script>
 </body>
 </html>
