--- a/cadastrosTags.html
+++ b/cadastrosTags.html
@@ -28,6 +28,6 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/pouchdb/dist/pouchdb.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="cadastros/tags.js" defer></script>
 </body>
 </html>
